[package]
name = "pericortex"
version = "0.2.1"
edition = "2018"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]

[lib]
name = "pericortex"
crate-type = ["rlib", "dylib"]

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies]
rand = "0.5"
zmq = "0.8.2"