[package]
name = "pericortex"
version = "0.2.1"
edition = "2018"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]

[lib]
name = "pericortex"
crate-type = ["lib", "dylib"]

[dependencies]
rand = "0.6.5"
zmq = "0.9.0"
zip = "0.5.0"

tempdir = "0.3.7"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "engrafo_worker"
path = "bin/engrafo_worker.rs"

[features]
default=[]
engrafo=[]

[package.metadata.docs.rs]
features = ["engrafo"]
no-default-features = true
